<resources>
    <string name="app_name">plant_manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_page">Gerencie suas plantas de forma fácil</string>
    <string name="subtitle_home_page">Não esqueça mais de regas suas plantas. Nós cuidamos de lembrar você sempre que precisar.</string>
    <string name="button_next"><![CDATA[>]]></string>
    <string name="title_introdution_page">Como podemos chamar você?</string>
    <string name="hint_name">Digite um nome</string>
    <string name="button_confirm">Confirmar</string>
    <string name="subtitle_mid_fragment">Agora vamos começar a cuidar das sua plantinhas com muito cuidado.</string>
    <string name="title_fragment">Prontinho</string>
    <string name="button_start">Começar</string>
    <string name="hello">Olá,</string>
    <string name="name">Seu nome</string>
    <string name="title_list_plants">Em qual ambiente</string>
    <string name="subtitle_list_plants">você quer colocar sua planta?</string>
    <string name="environment">Environment</string>
    <string name="name_plant">Name Plant</string>
    <string name="welcome_app">Bem vindo ao Plant Manager</string>
    <string name="hint_email">Informe o email</string>
    <string name="hint_password">Informe a senha</string>
    <string name="login">Entrar</string>
    <string name="forgot_password">Esqueci a senha</string>
</resources>